# claims-attributes-api

./: .dockerignore  .gitignore  AttributesFAPI.tf  Dockerfile  Dockerfile.build  Fortifyclaims-attributes-api.fpr  Fortifyclaims-attributes-api.sh  Fortifyclaims-attributes-api.sh.args  Jenkinsfile  Makefile  README.md  build.sh  cacert.pem  docker-compose.dev.yml  docker-compose.prod.test.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  docker-test-entrypoint.sh  pyproject.toml  requirements.txt  scripts.py  start.sh
api/: Dockerfile  dev.env  main.py  pyproject.toml  summary.md
api/app/: main.py  schemas.py  settings.py
api/app/routers/: predict.py
api/routers/: docs.py  healthcheck.py  predict.py
app/: flashes.py  main.py  special_issues.py
attributes_fastapi/: classification.py  schemas.py
caapi_shared/: pyproject.toml  schemas.py
claims_attributes/: main.py  schemas.py
classifier_service/: main.py  pyproject.toml
classifier_service/app/: main.py  schemas.py
classifier_service/app/data/: LRclf.pkl
classifier_service/data/: classification_text.csv
docker/: Dockerfile  Dockerfile.build  README.md  docker-compose.yml
docker/va-python-application-base/: Dockerfile  docker-test-entrypoint.sh  gunicorn_conf.py  pyproject.toml  scripts.py  start-reload.sh  start.sh
dockerfile_shared/: install-docker-centos8
docs/: README.md  Security.md
flashes_service/: Dockerfile  flashes.json  main.py  pyproject.toml
generic/: start-reload.sh
generic/app/: main.py
shared/: combine-ca-certs  install-awscli  install-git-centos8  pyproject.toml  retry
special_issues_service/: Dockerfile  main.py  pyproject.toml
special_issues_service/app/: main.py  schemas.py
src/api_service/: pyproject.toml
src/api_service/app/: docker.env  main.py  settings.py
src/api_service/app/data/: summary.md
src/api_service/app/routers/: predict.py
src/api_service/tests/: conftest.py  local.env  prod.env  settings.py  test_api.py  test_endpoints.py  test_main.py  test_services.py
src/classifier_service/: pyproject.toml
src/classifier_service/app/: main.py
src/classifier_service/tests/: test_classifier.py
src/flashes_service/: .dockerignore  pyproject.toml
src/flashes_service/app/: main.py  schemas.py
src/flashes_service/tests/: test_flashes.py
src/shared/: pyproject.toml
src/shared/caapi_shared/: schemas.py
src/special_issues_service/: .dockerignore  pyproject.toml
src/special_issues_service/app/: main.py
src/special_issues_service/app/data/: special_issues.json
src/special_issues_service/tests/: test_special_issues.py
src/test/: pyproject.toml
src/test/app/: scripts.py  settings.py  test_services.py
src/testing_service/: Dockerfile  docker-test-entrypoint.sh  pyproject.toml
src/testing_service/app/: .env.local  local.env  main.py  prod.env  settings.py  test_services.py
src/testing_service/tests/: test_services.py  test_tests.py
tests/: .coverage  test_attributes_fastapi.py  test_main.py
tests/docker/: entrypoint.sh
vectorizer_service/: main.py  pyproject.toml  schemas.py
vectorizer_service/app/: main.py  schemas.py
vectorizer_service/app/data/: vectorizer.pkl
