[tool.poetry]
name = "claims-attributes"
version = "1.0.0"
description = ""
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
packages = [
    { include = "caapi_shared"},
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61"
joblib = "^0.17.0"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
uvicorn = {extras = ["standard"], version = "^0.12.0"}
gunicorn = "^20.0.4"
certifi = "^2020.11.8"
requests = "^2.25.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
autopep8 = "^1.5.4"
certifi = "^2020.11.8"
coverage = "^5.3"
isort = "^5.6.4"
rope = "^0.18.0"

[tool.poetry.scripts]
test = 'scripts:test'
server = 'scripts:server'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
