[tool.poetry]
name = "api"
version = "1.0.0"
description = "API for the Claims Attributes API"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
requests = "^2.25.0"
caapi-shared = {path = "../shared"}


[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
flake8 = "^3.8.4"
black = "^20.8b1"
certifi = "^2020.12.5"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
