[tool.poetry]
name = "special_issues_service"
version = "1.0.0"
description = "Special Issues Service, pat of the Claims Attributes API"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
