[tool.poetry]
name = "vectorizer_service"
version = "1.0.0"
description = "Vectorizer for claims text. Part of the Claims Attributes API"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.4"
pydantic = "^1.7.3"
fastapi = "^0.62.0"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
