[tool.poetry]
name = "python_base_generic"
version = "0.1.0"
description = ""
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version="^0.13.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
