[tool.poetry]
name = "classifier_service"
version = "1.0.0"
description = "Classifier Service for Claims Attributes API"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
joblib = "^1.0.0"
fastapi = "^0.62.0"
uvicorn = {extras = ["standard"], version = "^0.13.1"}
requests = "^2.25.0"
importlib-resources = "^3.3.0"
scipy = "^1.5.4"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
