[tool.poetry]
name = "app"
version = "1.0.0"
description = "Test module for CAAPI microservices"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
importlib-resources = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pylint = "^2.6.0"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
